<resources>
    <string name="app_name">Task Manager</string>
    <string name="name">Name</string>
    <string name="commit">Commit</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="time">Time</string>
    <string name="Current_tasks">Current tasks</string>
    <string name="menu_more">More</string>
    <string name="change">Change</string>
    <string name="z_a">Z-A</string>
    <string name="a_z">A-Z</string>
    <string name="later">Later</string>
    <string name="Early">Early</string>
    <string name="menu">menu</string>
    <string name="menu_sort">menu_sort</string>
    <string name="add_task">Add task</string>
    <string name="add_random_task">Add random tasks</string>
    <string name="delete_all">Delete all</string>
    <string name="settings">Settings</string>
    <string name="delete_all_tasks">You want to delete all notes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="configure_interface">Configure the interface</string>
    <string name="delete">Delete</string>
    <string name="color_is_not_started_task">Colour of not started task </string>
    <string name="colour_of_not_started_task">Colour of not started task</string>
    <string name="color_of_started_task">Color of started task</string>
    <string name="color_of_finish_task">Color of finish task</string>
    <string name="additional_settings">Additional settings</string>
    <string name="default_setting">Default setting</string>
</resources>
