<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.new_task_activity.NewTaskActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        style="@style/Toolbar">
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/task_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="18dp"
            android:inputType="text"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/primary_text"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/task_Commit_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/commit"
            android:padding="18dp"
            android:inputType="text"
            android:textColor="@color/primary_text"
            android:maxLines="3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_new_task_bt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:background="@color/accent"
                android:layout_marginRight="16dp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/exit_bt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exit"
                android:background="@color/accent"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>